# search-benchmark-game

./: CONTRIBUTE.md  Makefile  README.md  corpus_transform.py
engines/lucene-9.9.2-multifield/src/main/java/: BuildIndex.java  DoQuery.java
engines/seekstorm-0.1.14/: Cargo.toml
engines/seekstorm-0.1.15-multifield/: Makefile
engines/seekstorm-0.1.15-singlefield/: Cargo.toml
engines/tantivy-0.22-singlefield/: Makefile
src/: client.py
web/src/: index.js
