[package]
name = "seekstorm-bench"
version = "0.1.0"
authors = ["Wolf Garbe"]
edition = "2021"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
seekstorm = "0.1.15"
# seekstorm =  { path = "../../../seekstorm_rust" }
tokio = "1.38.0"

[profile.release]
lto = true
opt-level = 3
overflow-checks = false
debug-assertions = false
debug = false
panic = "abort"
strip = "debuginfo"
